--- a/src/layout/base.css
+++ b/src/layout/base.css
@@ -47,18 +47,27 @@ table {
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Roboto', 'sans-serif' !important;
+html, body {
+	height: 100%;
+	width: 100%;
+	font-family: 'Roboto', 'sans-serif' !important;
+}
+
+.app {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.container {
+	width: 90%;
+	height: 100%;
+    margin: 0 auto auto;
 }
 
 a {
-    text-decoration: none;
-    color: #000;
+	text-decoration: none;
+	color: #000;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
-
-.container {
-    width: 90%;
-    margin: 0 auto;
-}
