--- a/src/layout/animations.css
+++ b/src/layout/animations.css
@@ -24,3 +24,13 @@
   }
   
 }
+@keyframes pageSlide {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
